crates/aura-app/tests/ui/workflow_parse_helper_private.rs
fn main() {
    let _ = aura_app::ui::workflows::parse::parse_authority_id;
}
